# azure-openai-ptu-sizing-tool

./: .dockerignore  .gitattributes  .gitignore  Allstate_Cost_Optimization_Visual_Single_Slide_v2.pptx  Azure_OpenAI_PTU_OnePager_Linda.docx  Azure_OpenAI_PTU_Playbook_Linda.docx  Azure_OpenAI_PTU_Playbook_Linda.pptx  CONTRIBUTING.md  Dockerfile  LICENSE  PTU Acceleration IP.docx  PTU_Exec_Slide3_TalkTrack_Linda.pptx  PTU_Exec_Slides_Linda.pptx  PTU_Readiness_Checklist.pptx  PTU_Readiness_Checklist_Fillable.docx  PTU_Sizing_Worksheet_Linda.xlsx  PTU_Workshop_Facilitator_Deck_Linda.pptx  PTU_Workshop_in_a_Box_Linda.docx  PTU_vs_PAYGO_Cost_Optimization_Guide.pptx  PTU_vs_PAYGO_Cost_Optimization_Guide2.pptx  README.md  Top 10 PTU Mistakes.docx  Top 10 PTU Mistakes_all.docx  azure.yaml  do not use this file.docx  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
app/: PTU_Sizing_Demo_Notebook.ipynb  PTU_Sizing_Notebook.ipynb  README.md  README_PTU_Demo.md  What’s included.docx  pricing_data.json  ptu_core.py  ptu_streamlit_app.py  region_data.json  region_refresh.py  requirements.txt  requirements_ptu_demo.txt  test_ptu_core.py
docs/: Architecture_Driven_Capacity_Planning_Whitepaper.docx  Architecture_Driven_Capacity_Planning_Whitepaper.html  demo-script.md
infra/: main.bicep  resources.bicep
linkedin/: LinkedIn Carousel.docx  Top 10 PTU mistakes I see customers make.docx
scripts/: demo_play.ps1  demo_play.sh  deploy-appservice.ps1  refresh_pricing.py  refresh_regions.py  region-refresh-job.yaml  test_token_usage.py  test_token_usage_kql.py  (+4 more)
(+9 files in other folders)
